--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 
-<h1>My location is ...</h1>
+<h1>Location Information</h1>
 <p id="location"></p>
+<p id="info"></p>
 </body>
 </html>
