--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 </head>
 <body>
 
+<p id="info"></p> 
+<p id="time"></p>
+<p id="location"></p>
+<p id="distance"></p>
+<p id="error"></p>
+
 <h1>How far did I go</h1>
 <form>
 	<button id="track">Start</button>
 </form>
-<p id="info"></p> 
-<p id="location"></p>
-<p id="distance"></p>
+
 </body>
 </html>
